--- a/style.css
+++ b/style.css
@@ -19,8 +19,8 @@ h3{
 }
 img{
     text-align:right;
-    max-width:40%;
-    width: 40%;
+    max-width:30%;
+    width: 30%;
     height: auto;
     
 }
@@ -37,6 +37,6 @@ button{
     padding-right: 16px;
     padding-left: 16px;
     text-shadow: grey;
-    color:blue;
+    color:bluegit;
 
 }
